This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

03-May-2010 (Gnomi)
  - insert_inherited() returned the function index for the first match
    and the program pointer for the last match on wildcarded super calls,
    resulting in memory access beyond the program block.
    (prolang.y)

13-Feb-2010 (Zesstra)
  - Fixed Div-by-Zero in svalue_size().
    svalue_size() divides the memory used for a string by its refcount, but
    0 refs are valid for strings. This leads to a crash in then wiz command
    'dumpallobj', unless the refcount is checked before division. (#725).
    (dumpstat.c)

10-Feb-2010 (Gnomi)
  - optpat() shouldn't read over the end of the given ed command. (#722)
    (ed.c)

08-Feb-2010 (Gnomi)
  - Explicit context variables overwrote the types of the closure's
    arguments. (#711)
    (prolang.y)

31-Jan-2010 (Zesstra)
  - Increased UDP receive buffer, because UDP datagrams can be much larger
    than 1024 bytes and the rest of the datagram would be discarded upon
    recvfrom(). Datagram lengths up to 65507 bytes (including UDP and IPv4
    headers: 65535) are supported now.
    (comm.c)
  - Removed dirty BeOS hack. (comm.c)

27-Jan-2010 (Gnomi)
  - Added pretty printers for GDB7 for the main data structures.
    (src/ldmud-gdb.py, gdb/*)

25-Jan-2010 (Gnomi)
  - add_action() leaked the function name string. (#713)
    (actions.c)

23-Jan-2010 (Zesstra)
  - get_type_info() failed to reference the function name it returns, causing
    the string to loose refcounts and being eventually free'd erronenously.
    (#712)
    (efuns.c)

23-Jan-2010 (Gnomi)
  - RTTC on a toplevel function call doesn't remove the first control
    stack frame anymore. (#715)
    (interpret.c)
  - Heartbeats and call_outs now clear current_prog afterwards. (#715)
    (simulate.c, heartbeat.c)

19-Jan-2010 (Gnomi)
  - RTTC in restore_object() didn't handle nonexistent variables